new vqgan and more

--- a/requirements.txt
+++ b/requirements.txt
@@ -4,9 +4,13 @@ ipywidgets
 regex
 tqdm
 googletrans==3.1.0a0
-# torch~=1.7.1
-# torchvision~=0.8.2
+torch>=1.7.1
+torchvision>=0.8.2
 opencv-python
 sentence_transformers
-kornia
+transformers==4.6.0
+kornia==0.5.3
 lpips
+omegaconf>=2.0.0
+pytorch-lightning>=1.0.8
+einops
