--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,10 @@
-# Byte-compiled / optimized / DLL files
+_# Byte-compiled / optimized / DLL files
 __pycache__/
 _cudacache/
 .pytest_cache
 *.egg-info
 thumbs.db
+_out
 
 .ipynb_checkpoints
 
